font awesome added. new user-info directive added

--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
   "name": "box_for_chrome",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "authors": [
-    "Jeffrey Meadows <jmeadows@box.com>"
+    "Jeffrey Meadows <jmeadows@box.com>",
+    "Eric Smith <software.ecs@gmail.com>"
   ],
   "description": "Chrome app for exploring your Box account.",
   "keywords": [
@@ -27,6 +28,7 @@
     "angular-sanitize": "~1.2.20",
     "bootstrap-css-only": "~3.2.0",
     "angular-bootstrap": "~0.11.0",
-    "box-chrome-sdk": "~0.1.1"
+    "box-chrome-sdk": "~0.1.1",
+    "font-awesome-bower": "4.3.0"
   }
 }
