--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "Box Secure Transfer",
-    "version": "0.2.0",
+    "name": "Box Secure Transfer For Chrome",
+    "version": "0.3.0",
     "description": "Securely transfer files to any user of your choice",
     "icons": {
         "128": "img/box_cyan_128.png"
